--- a/concluding.tex
+++ b/concluding.tex
@@ -77,8 +77,8 @@ As supplemental material, the Appendix (Chapter~\ref{cha:appendix}) contains
 presenting a simplified prior model that gives interesting insights into the updating step
 for the regression parameters and offers opportunities for inferences based on sets of priors
 (Section~\ref{sec:festschrift});
-\item ***a short summary of a previous approach to Bayesian linear regression
-with sets of priors which was published by \textcite{Walter2007a}, in Section~\ref{sec:isipta07};
+%\item ***a short summary of a previous approach to Bayesian linear regression
+%with sets of priors which was published by \textcite{Walter2007a}, in Section~\ref{sec:isipta07};
 \item some first technical results characterising a new prior parameter set shape,
 described informally in Section~\ref{sec:concluding-outlook} below
 (Section~\ref{sec:boatshape}).
@@ -543,8 +543,8 @@ could be expressed as a shift of the entire set within the parameter space.
 In fact, such a parametrisation has been developed by Mi\c{k}elis Bickis (personal communication),
 and he is currently preparing a manuscript elaborating the details of his findings.
 In this parametrisation, a canonical prior is represented by a coordinate $(\eta_0,\eta_1)$,
-where $\eta_1$ essentially replaces the main prior parameter $\yz$,
-while $\eta_0$ is just a shifted version of $\nz$.%
+where $\eta_1$ replaces the main prior parameter $\yz$,
+while $\eta_0$ is just a different name for $\nz$.%
 %there, update step for $\nz$ is the same, and shift for parameter replacing $\yz$ is the same for all. 
 \footnote{This parametrisation is described in more detail in Section~\ref{sec:boatshape},
 along with some first technical results that confirm the desired properties for the novel shape suggested there.}
