--- a/defs.tex
+++ b/defs.tex
@@ -119,6 +119,7 @@
 \def\tbz{\ol{b}\uz}
 \def\tbn{\ol{b}\un}
 
+\def\Eta{\mathrm{H}}
 
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
