--- a/setsofconjugatepriors.tex
+++ b/setsofconjugatepriors.tex
@@ -165,7 +165,7 @@ More precisely, \textcite[see Section~\ref{sec:jstp}]{Walter2009a} proposed
 a direct extension of the model framework discussed in Section~\ref{sec:generalmodel}
 by the definition of so-called \emph{LUCK-models},
 which were already used in \textcite{Walter2007a}
-to generalise Bayesian linear regression (see a short summary in Section~\ref{sec:isipta07}).
+to generalise Bayesian linear regression). %(see a short summary in Section~\ref{sec:isipta07}).
 These exploit*** the fact that the central properties of the model framework
 (see Section~\ref{sec:gbicp-properties-criteria} below)
 rely on the specific form of the update step \eqref{eq:canonicalupdate} only.
