--- a/defs.tex
+++ b/defs.tex
@@ -120,6 +120,34 @@
 \def\tbn{\ol{b}\un}
 
 \def\Eta{\mathrm{H}}
+\def\EZ{\mathrm{H}\uz}
+\def\EN{\mathrm{H}\un}
+
+\def\ezl{\ul{\eta}_0}
+\def\ezu{\ol{\eta}_0}
+
+\def\ezz{\eta_0\uz}
+\def\ezn{\eta_0\un}
+\def\eoz{\eta_1\uz}
+\def\eon{\eta_1\un}
+
+\def\ezzl{\ul{\eta}_0\uz}
+\def\ezzu{\ol{\eta}_0\uz}
+\def\eznl{\ul{\eta}_0\un}
+\def\ezzn{\ol{\eta}_0\un}
+
+\def\eozl{\ul{\eta}_1\uz}
+\def\eozu{\ol{\eta}_1\uz}
+\def\eonl{\ul{\eta}_1\un}
+\def\eonu{\ol{\eta}_1\un}
+
+\def\eol{\ul{\eta}_1}
+\def\eou{\ol{\eta}_1}
+
+\def\czl{\ul{c}\uz}
+\def\czu{\ol{c}\uz}
+
+\def\equiv{\Longleftrightarrow}
 
 \newcommand{\cdf}{\operatorname{F}}
 \newcommand{\p}{\operatorname{P}}
@@ -132,6 +160,8 @@
 \newcommand{\lik}{\operatorname{lik}} % likelihood function
 \newcommand{\tr}{\operatorname{tr}} % trace of a matrix
 
+\DeclareMathOperator*{\argmin}{arg\,min}
+\DeclareMathOperator*{\argmax}{arg\,max}
 
 \def\El{\ul{\E}}
 \def\Eu{\ol{\E}}
